<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:singleLine="true"
        android:title="Domain"
        android:key="@string/pref_domain"
        android:defaultValue="@string/pref_domain_default" />
    <EditTextPreference
        android:digits="0123456789."
        android:title="Local IP"
        android:key="@string/pref_localip"
        android:defaultValue="@string/pref_localip_default" />
    <EditTextPreference
        android:inputType="number"
        android:title="Local Port"
        android:key="@string/pref_localport"
        android:defaultValue="@string/pref_localport_default" />
    <CheckBoxPreference
        android:title="Auto Start"
        android:key="pref_auto_start"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:title="Register Data Persistence"
        android:key="pref_register_data_persistence"
        android:defaultValue="false" />
</PreferenceScreen>